# Nix_driver

./: .gitignore
idmind_controller/: CMakeLists.txt  README.MD  package.xml
idmind_controller/cfg/: global_defaults.yaml  globalplanner_defaults.yaml  laser_filter_config.yaml  local_defaults.yaml  localplanner_defaults.yaml  mbase_defaults.yaml
idmind_controller/launch/: amcl.launch  idmind_controller.launch  move_base.launch
idmind_controller/maps/corridor/: corridor.pgm  corridor.yaml  corridor_obs.pgm  corridor_obs.yaml
idmind_controller/maps/corridor2/: corridor2.pgm  corridor2.yaml  corridor2_obs.pgm  corridor2_obs.yaml
idmind_controller/maps/idmind/: mapa.pgm  mapa_obs.pgm  mapa_obs.yaml
idmind_controller/maps/idmind_out/: mapa.pgm  mapa.yaml  mapa_obs.pgm  mapa_obs.yaml
idmind_controller/maps/narrow_corridor_simul/: mapa.pgm  mapa.yaml  mapa_obs.pgm  mapa_obs.yaml  narrow_corridor_simul.pgm  narrow_corridor_simul.yaml
idmind_controller/maps/obstacle_course_simul/: mapa.pgm  mapa.yaml  mapa_obs.yaml
idmind_controller/maps/raposa_idmind/: mapa.pgm  mapa.yaml  mapa_obs.pgm  mapa_obs.yaml  raposa_idmind.pgm
idmind_controller/maps/raposa_idmind_simul/: mapa.pgm  mapa.yaml  mapa_obs.pgm  mapa_obs.yaml
idmind_controller/maps/raposa_lispolis_1/: mapa.pgm  mapa.yaml  mapa_obs.yaml
idmind_controller/msg/: CloserObstaclesMsg.msg
idmind_controller/src/: controller_interface.py  controller_node.py  idmind_lasers.py  idmind_recovery.py
idmind_controller/srv/: DoAction.srv  Obstacles.srv
idmind_imu/: CMakeLists.txt  README.MD  package.xml
idmind_imu/cfg/: idmind_imu.yaml
idmind_imu/ino/razor/idmind_imu_stream/: idmind_imu_stream.ino
idmind_imu/launch/: idmind_imu.launch
idmind_imu/src/: idmind_mpu6050.py  idmind_razor.py  idmind_razor.py.save  idmind_razor.py.save.1
idmind_imu_m0/: CMakeLists.txt  package.xml
idmind_imu_m0/firmware/idmind_imu_stream/: idmind_imu_stream.ino
idmind_imu_m0/rules/: razor_imu_m0_driver.rules
idmind_imu_m0/src/: idmind_imu_stream.py  idmind_imu_stream_old.py  idmind_serialport.py  read_raw_imu_test.py  viz_imu.py
idmind_motorsboard/: CMakeLists.txt  README.MD  package.xml
idmind_motorsboard/cfg/: idmind_motors.yaml
idmind_motorsboard/launch/: idmind_motorsboard.launch
idmind_motorsboard/msg/: WheelsMB.msg
idmind_motorsboard/src/: calibration.py  calibration_raposa.py  idmind_motors.py  test_drivers.py
idmind_navigation/: CMakeLists.txt  README.MD  package.xml
idmind_navigation/launch/: idmind_ekf.launch  idmind_navigation.launch
idmind_navigation/src/: navigation_node.py  odometry_node.py  upo_odometry.py
idmind_navigation/srv/: CalibIMU.srv
idmind_robot/: CMakeLists.txt  README.MD  package.xml  start_robot.sh
idmind_robot/cfg/: 99-idmind_raposa.rules  idmind_robot.yaml  robot_navigation.rviz
idmind_robot/launch/: search_demo.launch  start_gmapping.launch  start_hardware.launch  start_navigation.launch  start_robot.launch  start_rviz.launch  start_simul.launch
idmind_robot/msg/: SystemVoltages.msg
idmind_sensorsboard/: CMakeLists.txt  README.MD  package.xml
idmind_sensorsboard/launch/: idmind_sensorsboard.launch
idmind_sensorsboard/msg/: SystemVoltages.msg
idmind_sensorsboard/src/: idmind_sensors.py  idmind_sensors_new.py  sensors_drivers.py  test_sensors.py
idmind_serial2/: CMakeLists.txt  README.MD  package.xml  setup.py
idmind_serial2/src/idmind_serial2/: idmind_serialport.py
idmind_teleop/launch/: idmind_teleop.launch  joy.launch
idmind_teleop/src/: joy_controller.py
raposa_launchers/: CMakeLists.txt  package.xml  start_teleop.sh
raposa_launchers/cfg/: smoother.yaml
raposa_launchers/launch/: odometry.launch  pub_joy.launch  teleop.launch
raposa_launchers/scripts/: blink_lights.sh  load_joy.sh  nix_test.py  pub_joy.sh  start_raposa.sh  start_teleop.sh
raposa_launchers/services/: startup_service.service
smoother/: CMakeLists.txt  package.xml
smoother/cfg/: smoother.cfg
smoother/launch/: tests.launch
smoother/src/: smoother_node.cpp
start_node/: CMakeLists.txt  package.xml
start_node/src/: start_node_node.cpp  start_node_node_client.cpp
testing_packages/test_pkg/: CMakeLists.txt  package.xml
testing_packages/test_pkg/src/: test.py
testing_packages/testing_imu/: CMakeLists.txt  package.xml
testing_packages/testing_imu/launch/: testing_imu.launch
testing_packages/testing_imu/src/: testing_imu.py
testing_packages/testing_motorsboard/: CMakeLists.txt  package.xml
testing_packages/testing_motorsboard/cfg/: idmind_motors.yaml
testing_packages/testing_navigation/: CMakeLists.txt  package.xml
testing_packages/testing_ros_navigation/: CMakeLists.txt  package.xml
testing_packages/testing_sensorsboard/: CMakeLists.txt  package.xml
testing_packages/testing_serial/: CMakeLists.txt  package.xml  setup.py
(+16 files in other folders)
