<?xml version="1.0"?>
<package format="2">
    <name>idmind_controller</name>
    <version>1.0.0</version>
    <description>The idmind_controller package will receive navigation goals, plan a path and follow the trajectory,
        while avoiding obstacles.</description>

    <maintainer email="cneves@idmind.pt">Carlos Neves</maintainer>
    <maintainer email="hpovoa@idmind.pt">Henrique Póvoa</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>roslib</depend>
    <!-- Message Generation -->
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <!-- Action Server -->
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <!-- External messages and services -->
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>move_base_msgs</depend>
    <!-- Other packages -->
    <depend>joy</depend>
    <depend>move_base</depend>
    <depend>idmind_robot</depend>
    <depend>tf_conversions</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <!-- Python modules -->
    <depend>python-numpy</depend>
    <depend>python-json</depend>
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
