<?xml version="1.0"?>
<package format="2">
  <name>idmind_motorsboard</name>
  <version>1.0.0</version>
  <description>The idmind_motorboard package, used to communicate with IDMind's Motor Board</description>

  <maintainer email="cneves@idmind.pt">Carlos Neves</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>idmind_serial2</depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>

  <depend>python-numpy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
