<?xml version="1.0"?>
<package format="2">
    <name>idmind_navigation</name>
    <version>1.0.0</version>
    <description>This package connects different controllers (joystick, move_base or idmind) to MotorBoard/Gazebo and publishes odometry</description>
    <maintainer email="cneves@todo.todo">cneves</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>joy</depend>
    <depend>idmind_imu</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <export>
          <!-- Other tools can request additional information be placed here -->
    </export>
</package>
