<?xml version="1.0"?>
<package format="2">
  <name>idmind_robot</name>
  <version>0.1.0</version>
  <description>The idmind_robot package</description>

  <maintainer email="cneves@idmind.pt">Carlos Neves</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
